objects/Process__c.object
<CustomObject><fields>
        <fullName>Cost_Per_UOM__c</fullName>
        <label>Cost Per UOM</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Cost_Per__c</fullName>
        <label>Cost Per</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Process_Family__c</fullName>
        <label>Process Family</label>
        <picklist>
            <picklistValues>
                <fullName>Conformance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fettle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mould</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Charging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Rate1__c</fullName>
        <label>Rate1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Rate_Description__c</fullName>
        <label>Rate Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Synchro_Index__c</fullName>
        <externalId>true</externalId>
        <label>Synchro Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>UOM1__c</fullName>
        <label>UOM1</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAY (24HR)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Usage_Notes__c</fullName>
        <label>Usage Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Process</label><nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Processes</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>